--- a/Dapper.WebApi/Dapper.WebApi.csproj
+++ b/Dapper.WebApi/Dapper.WebApi.csproj
@@ -4,5 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dapper.Infrastructure\Dapper.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
